fix(cobol): exercise real translation in characterization harness
Address Codex PR #138 review:
- CharacterizationFixtureContractTest now runs the production
  parse+transpile path twice per supported fixture, compiles and
  executes the generated class, and asserts its observation against
  expected-behavior.json (was only schema/javac on committed goldens).
- Reproducibility gate compares two independently generated outputs.
- Narrow SUPPORTED to move-numeric (only end-to-end fixture today);
  demote the rest to residual action items, drop their expected.java.
- Regenerate move-numeric golden from real output (returns -12.34,
  matching the observation; resolves the 1234 vs -12.34 contradiction).
- goto-reducible action item: failedGate review -> review-eligibility.

renovatio-provider-cobol: 52/52 tests green.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>